# gh-emoji-expanded

./: .gitignore  .travis.yml  Cargo.toml  README.md
generate/: Cargo.toml
generate/src/: main.rs
src/: data_generated.rs  data_generated_expanded.rs  data_generated_genmoji.rs  lib.rs
tests/: compare_to_js.rs
