[package]
name = "gh-emoji"
version = "1.0.6"
authors = ["Kornel <kornel@geekhood.net>", "Jiří Šebele <sindriava@gmail.com>"]

description = "Convert `:emoji:` to Unicode using GitHub's emoji names"
repository = "https://github.com/kornelski/gh-emoji"
homepage = "https://lib.rs/crates/gh-emoji"
readme = "README.md"
license = "MIT"
include = ["/src/*.rs", "/LICENSE", "/README.md", "/Cargo.toml"]
categories = ["text-processing"]
keywords = ["emoji", "github", "markdown", "unicode", "convert"]
edition = "2018"

[badges]
travis-ci = { repository = "kornelski/gh-emoji" }

[dependencies]
phf = "0.10.0"
regex = { version = "1.5.4", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
