[package]
name = "gh-emoji-expanded"
version = "1.0.7"
authors = ["Daan Wynen <emoji-db-expanded@muchmuch.coffee>", "Kornel <kornel@geekhood.net>", "Jiří Šebele <sindriava@gmail.com>"]

description = "Convert `:emoji:` to Unicode using GitHub's and EmojiDB's emoji names"
repository = "https://github.com/black-puppydog/gh-emoji-expanded"
readme = "README.md"
license = "MIT"
include = ["/src/*.rs", "/LICENSE", "/README.md", "/Cargo.toml"]
categories = ["text-processing"]
keywords = ["emoji", "github", "markdown", "unicode", "convert"]
edition = "2021"

[features]
# Use the expanded emoji set, adding the shortcodes from emoji-db on top of gemoji
emojidb = []

[dependencies]
phf = "0.11.0"
regex = { version = "1.6.0", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "passively-maintained" }
