[package]
name = "gh-emoji-expanded-generate"
version = "0.1.3"
authors = ["Daan Wynen <emoji-db-expanded@muchmuch.coffee>", "Kornel <kornel@geekhood.net>", "Jiří Šebele <sindriava@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
phf_codegen = "0.11.0"
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
